--- a/chrome-app/manifest.json
+++ b/chrome-app/manifest.json
@@ -1,7 +1,7 @@
 {
   "manifest_version": 2,
   "name": "nos",
-  "description": "A Secure NEURO Wallet",
+  "description": "A Secure NOLLAR Wallet",
   "version": "0.9.12",
   "permissions": [
     "storage",
