Add NOS branding

--- a/appConfig.json
+++ b/appConfig.json
@@ -1,10 +1,10 @@
  {
   "packageName": "nos",
-  "packageDescription": "NOS NEURO Wallet",
+  "packageDescription": "NOS-Token Wallet",
   "packageNameId": "se.krampe.canoe",
   "statusBarColor": "#192c3a",
   "userVisibleName": "NOS",
-  "purposeLine": "NOS NEURO Wallet",
+  "purposeLine": "NOS-Token Wallet",
   "bundleName": "nos",
   "appUri": "nos",
   "name": "nos",
@@ -16,13 +16,13 @@
   "gitHubRepoBugs": "https://github.com/gokr/canoe/issues",
   "disclaimerUrl": "https://getcanoe.io/disclaimer",
   "url": "https://nos.cash",
-  "appDescription": "NOS NEURO Wallet",
+  "appDescription": "NOS-Token Wallet",
   "winAppName": "NOS",
   "WindowsStoreIdentityName": "---",
-  "WindowsStoreDisplayName": "NOS - Secure NEURO Wallet",
+  "WindowsStoreDisplayName": "Secure NOS-Token Wallet",
   "windowsAppId": "---",
   "pushSenderId": "---",
-  "description": "A Secure NEURO Wallet",
+  "description": "A Secure NOS-Token Wallet",
   "version": "0.0.1",
   "androidVersion": "391000",
   "_extraCSS": null,
