--- a/appConfig.json
+++ b/appConfig.json
@@ -4,7 +4,7 @@
   "packageNameId": "se.krampe.canoe",
   "statusBarColor": "#192c3a",
   "userVisibleName": "NOS",
-  "purposeLine": "NOS NOLLAR Wallet",
+  "purposeLine": "NOLLAR Wallet",
   "bundleName": "nos",
   "appUri": "nos",
   "name": "nos",
@@ -16,10 +16,10 @@
   "gitHubRepoBugs": "https://github.com/gokr/canoe/issues",
   "disclaimerUrl": "https://getcanoe.io/disclaimer",
   "url": "https://nos.cash",
-  "appDescription": "NOS NOLLAR Wallet",
+  "appDescription": "NOLLAR Wallet",
   "winAppName": "NOS",
   "WindowsStoreIdentityName": "---",
-  "WindowsStoreDisplayName": "NOS - Secure NOLLAR Wallet",
+  "WindowsStoreDisplayName": "Secure NOLLAR Wallet",
   "windowsAppId": "---",
   "pushSenderId": "---",
   "description": "A Secure NOLLAR Wallet",
