changed website URL to www.nollar.org

--- a/appConfig.json
+++ b/appConfig.json
@@ -15,7 +15,7 @@
   "gitHubRepoUrl": "git://github.com/gokr/canoe.git",
   "gitHubRepoBugs": "https://github.com/gokr/canoe/issues",
   "disclaimerUrl": "https://getcanoe.io/disclaimer",
-  "url": "https://nos.cash",
+  "url": "https://www.nollar.org",
   "appDescription": "NOS NOLLAR Wallet",
   "winAppName": "NOS",
   "WindowsStoreIdentityName": "---",
